# zeek-ebpf-plugin

./: .gitignore  CMakeLists.txt  README  configure  docker-build-centos.sh  docker-build-ubuntu.sh
docker/: Dockerfile.centos  Dockerfile.ubuntu  build.sh
scripts/: __load__.bro  init.zeek
src/: AF_XDP.cc  AF_XDP.h  Plugin.cc  Plugin.h  SF_Ring.cc  SF_Ring.h  SocketFilter.cc  SocketFilter.h  bpf_helpers.h  bpf_load.h  filter.c  perf-sys.h  sf.bif
tests/: btest.cfg
tests/Scripts/: get-bro-env
tests/af_xdp/: show-plugin.bro
